Alter home page file or page reference

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<title>Kindled</title>
 	<meta name="description"
 		content="This is a website developed with the help of a design inspired by one of the Geekfolio's Creative Agency & Portfolio theme template.">
-	<link rel="icon" type="image/png" sizes="128x128" href="images/favicon-128x128.png">
+	<link rel="icon" type="image/png" sizes="128x128" href="./images/favicon-128x128.png">
 
 	<!-- Google fonts starts -->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
@@ -21,7 +21,7 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 
 	<!-- local style import -->
-	<link rel="stylesheet" href="styles/style.css">
+	<link rel="stylesheet" href="./styles/style.css">
 </head>
 
 <body>
@@ -86,31 +86,31 @@
 						</li>
 						<li class="nav-item navbar-rmc-nav-item">
 							<a class="nav-link text-uppercase fw-semibold cfs-13 cursor-hs-scale ls-normal navbar-rmc-nav-link"
-								href="pages/about.html">
+								href="./pages/about.html">
 								<div class="rolling-text">About</div>
 							</a>
 						</li>
 						<li class="nav-item navbar-rmc-nav-item">
 							<a class="nav-link text-uppercase fw-semibold cfs-13 cursor-hs-scale ls-normal navbar-rmc-nav-link"
-								href="pages/services.html">
+								href="./pages/services.html">
 								<div class="rolling-text">Services</div>
 							</a>
 						</li>
 						<li class="nav-item navbar-rmc-nav-item">
 							<a class="nav-link text-uppercase fw-semibold cfs-13 cursor-hs-scale ls-normal navbar-rmc-nav-link"
-								href="pages/team.html">
+								href="./pages/team.html">
 								<div class="rolling-text">Team</div>
 							</a>
 						</li>
 						<li class="nav-item navbar-rmc-nav-item">
 							<a class="nav-link text-uppercase fw-semibold cfs-13 cursor-hs-scale ls-normal navbar-rmc-nav-link"
-								href="pages/portfolio.html">
+								href="./pages/portfolio.html">
 								<div class="rolling-text">Portfolio</div>
 							</a>
 						</li>
 						<li class="nav-item navbar-rmc-nav-item">
 							<a class="nav-link text-uppercase fw-semibold cfs-13 cursor-hs-scale ls-normal navbar-rmc-nav-link"
-								href="pages/contact.html">
+								href="./pages/contact.html">
 								<div class="rolling-text">Contact</div>
 							</a>
 						</li>
@@ -162,7 +162,7 @@
 
 								<div class="col-lg-auto">
 									<a class="position-relative overflow-hidden cursor-hs-scale hero-lia-circle-img-wr"
-										href="pages/about.html">
+										href="./pages/about.html">
 										<img class="w-100 h-100 object-fit-cover opacity-75 hero-lia-circle-img"
 											src="images/explore-more.png" alt="Explore More">
 										<svg
@@ -412,7 +412,7 @@
 											a unique.</p>
 
 										<a class="text-uppercase d-block text-primary border border-1 rounded-pill lh-lg cfs-13 ls-normal text-decoration-none cursor-hs-scale card-li-link"
-											href="pages/services.html"><span>Read More</span><svg
+											href="./pages/services.html"><span>Read More</span><svg
 												class="border border-1 rounded-circle card-li-link-icon" width="18" height="18"
 												viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
 												<path
@@ -439,7 +439,7 @@
 											a unique.</p>
 
 										<a class="text-uppercase d-block text-primary border border-1 rounded-pill lh-lg cfs-13 ls-normal text-decoration-none cursor-hs-scale card-li-link"
-											href="pages/services.html"><span>Read More</span><svg
+											href="./pages/services.html"><span>Read More</span><svg
 												class="border border-1 rounded-circle card-li-link-icon" width="18" height="18"
 												viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
 												<path
@@ -466,7 +466,7 @@
 											a unique.</p>
 
 										<a class="text-uppercase d-block text-primary border border-1 rounded-pill lh-lg cfs-13 ls-normal text-decoration-none cursor-hs-scale card-li-link"
-											href="pages/services.html"><span>Read More</span><svg
+											href="./pages/services.html"><span>Read More</span><svg
 												class="border border-1 rounded-circle card-li-link-icon" width="18" height="18"
 												viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
 												<path
@@ -686,7 +686,7 @@
 												development and strategy many different skills and disciplines in the production of all web.</p>
 
 											<a class="text-capitalize d-inline-block text-primary cfs-14 p-1 link-underline-primary link-underline-opacity-0 link-underline-opacity-100-hover card-lib-link cursor-hs-scale"
-												href="pages/services.html"><span>Read More</span>
+												href="./pages/services.html"><span>Read More</span>
 												<i class="fa-solid fa-arrow-right-long card-lib-link-icon"></i>
 											</a>
 										</div>
@@ -938,7 +938,7 @@
 					<div
 						class="border border-secondary border-opacity-25 rounded-4 text-center banner-lg-text-stroke footer-rcl-banner">
 						<a class="display-2 text-decoration-none text-primary fw-semibold d-inline-block px-2 py-3 cursor-hs-scale"
-							href="pages/contact.html">
+							href="./pages/contact.html">
 							<span>Let's </span>
 							<span class="banner-lts-stroke-text">Discuss</span>
 							<span class="material-icons display-2 lh-1 banner-lst-icon">arrow_outward</span>
