Alter home page elements src attribute

--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
 										<div class="row align-items-center mb-4 pb-2 animate__animated anim-gsap"
 											data-animation="animate__fadeIn" data-js-opacity-zero>
 											<div class="col-auto company-til-thumbnail-wr">
-												<img class="w-100" src="images/company/company-icon1.png" alt="Icon">
+												<img class="w-100" src="./images/company/company-icon1.png" alt="Icon">
 											</div>
 											<div class="col">
 												<h4 class="fs-6 cfs-xl-20 mb-3">High Standerd</h4>
@@ -283,7 +283,7 @@
 										<div class="row align-items-center animate__animated anim-gsap" data-animation="animate__fadeIn"
 											data-js-opacity-zero>
 											<div class="col-auto company-til-thumbnail-wr">
-												<img class="w-100" src="images/company/company-icon-2.png" alt="Icon">
+												<img class="w-100" src="./images/company/company-icon-2.png" alt="Icon">
 											</div>
 											<div class="col">
 												<h4 class="fs-6 cfs-xl-20 mb-3">Ease of Communication</h4>
@@ -327,43 +327,43 @@
 								<div class="swiper-wrapper brands-is-swiper-ctr">
 									<div class="swiper-slide">
 										<a class="d-block p-2 brands-is-img-wr cursor-hs-scale" href="#"><img class="w-100 opacity-75"
-												src="images/brand/asgardia.png" alt="Asgardia"></a>
+												src="./images/brand/asgardia.png" alt="Asgardia"></a>
 									</div>
 									<div class="swiper-slide">
 										<a class="d-block p-2 brands-is-img-wr cursor-hs-scale" href="#"><img class="w-100 opacity-75"
-												src="images/brand/nirastate.png" alt="Nirastate"></a>
+												src="./images/brand/nirastate.png" alt="Nirastate"></a>
 									</div>
 									<div class="swiper-slide">
 										<a class="d-block p-2 brands-is-img-wr cursor-hs-scale" href="#"><img class="w-100 opacity-75"
-												src="images/brand/velocity.png" alt="Velocity"></a>
+												src="./images/brand/velocity.png" alt="Velocity"></a>
 									</div>
 									<div class="swiper-slide">
 										<a class="d-block p-2 brands-is-img-wr cursor-hs-scale" href="#"><img class="w-100 opacity-75"
-												src="images/brand/utosia.png" alt="Utosia"></a>
+												src="./images/brand/utosia.png" alt="Utosia"></a>
 									</div>
 									<div class="swiper-slide">
 										<a class="d-block p-2 brands-is-img-wr cursor-hs-scale" href="#"><img class="w-100 opacity-75"
-												src="images/brand/kanba.png" alt="Kanba"></a>
+												src="./images/brand/kanba.png" alt="Kanba"></a>
 									</div>
 									<div class="swiper-slide">
 										<a class="d-block p-2 brands-is-img-wr cursor-hs-scale" href="#"><img class="w-100 opacity-75"
-												src="images/brand/asgardia.png" alt="Asgardia"></a>
+												src="./images/brand/asgardia.png" alt="Asgardia"></a>
 									</div>
 									<div class="swiper-slide">
 										<a class="d-block p-2 brands-is-img-wr cursor-hs-scale" href="#"><img class="w-100 opacity-75"
-												src="images/brand/nirastate.png" alt="Nirastate"></a>
+												src="./images/brand/nirastate.png" alt="Nirastate"></a>
 									</div>
 									<div class="swiper-slide">
 										<a class="d-block p-2 brands-is-img-wr cursor-hs-scale" href="#"><img class="w-100 opacity-75"
-												src="images/brand/velocity.png" alt="Velocity"></a>
+												src="./images/brand/velocity.png" alt="Velocity"></a>
 									</div>
 									<div class="swiper-slide">
 										<a class="d-block p-2 brands-is-img-wr cursor-hs-scale" href="#"><img class="w-100 opacity-75"
-												src="images/brand/utosia.png" alt="Utosia"></a>
+												src="./images/brand/utosia.png" alt="Utosia"></a>
 									</div>
 									<div class="swiper-slide">
 										<a class="d-block p-2 brands-is-img-wr cursor-hs-scale" href="#"><img class="w-100 opacity-75"
-												src="images/brand/kanba.png" alt="Kanba"></a>
+												src="./images/brand/kanba.png" alt="Kanba"></a>
 									</div>
 								</div>
 							</div>
@@ -398,7 +398,7 @@
 								<div class="col">
 									<div class="border border-1 rounded-1 card-lead-icon animate__animated anim-gsap"
 										data-animation="animate__fadeIn" data-js-opacity-zero data-animation-offset="200">
-										<div class="pb-3 mb-4 card-li-icon-wr"><img class="w-100" src="images/company/company-icon1.png"
+										<div class="pb-3 mb-4 card-li-icon-wr"><img class="w-100" src="./images/company/company-icon1.png"
 												alt="Icon 1">
 										</div>
 
@@ -425,7 +425,7 @@
 								<div class="col">
 									<div class="border border-1 rounded-1 card-lead-icon animate__animated anim-gsap animate__delay-1s"
 										data-animation="animate__fadeIn" data-js-opacity-zero data-animation-offset="200">
-										<div class="pb-3 mb-4 card-li-icon-wr"><img class="w-100" src="images/company/company-icon-2.png"
+										<div class="pb-3 mb-4 card-li-icon-wr"><img class="w-100" src="./images/company/company-icon-2.png"
 												alt="Icon 1">
 										</div>
 
@@ -452,7 +452,7 @@
 								<div class="col">
 									<div class="border border-1 rounded-1 card-lead-icon animate__animated anim-gsap animate__delay-1s"
 										data-animation="animate__fadeIn" data-js-opacity-zero data-animation-offset="200">
-										<div class="pb-3 mb-4 card-li-icon-wr"><img class="w-100" src="images/company/company-icon3.png"
+										<div class="pb-3 mb-4 card-li-icon-wr"><img class="w-100" src="./images/company/company-icon3.png"
 												alt="Icon 1">
 										</div>
 
@@ -489,7 +489,7 @@
 									<div class="card-img-footer">
 										<div class="mb-4">
 											<a class="d-block stretched-link cursor-hs-scale" href="#"><img class="w-100"
-													src="images/projects/project-1.jpg" alt="Project Image"></a>
+													src="./images/projects/project-1.jpg" alt="Project Image"></a>
 										</div>
 
 										<div>
@@ -508,7 +508,7 @@
 									<div class="card-img-footer">
 										<div class="mb-4">
 											<a class="d-block stretched-link cursor-hs-scale" href="#"><img class="w-100"
-													src="images/projects/project-2.jpg" alt="Project Image"></a>
+													src="./images/projects/project-2.jpg" alt="Project Image"></a>
 										</div>
 
 										<div>
@@ -527,7 +527,7 @@
 									<div class="card-img-footer">
 										<div class="mb-4">
 											<a class="d-block stretched-link cursor-hs-scale" href="#"><img class="w-100"
-													src="images/projects/project-3.jpg" alt="Project Image"></a>
+													src="./images/projects/project-3.jpg" alt="Project Image"></a>
 										</div>
 
 										<div>
@@ -546,7 +546,7 @@
 									<div class="card-img-footer">
 										<div class="mb-4">
 											<a class="d-block stretched-link cursor-hs-scale" href="#"><img class="w-100"
-													src="images/projects/project-4.jpg" alt="Project Image"></a>
+													src="./images/projects/project-4.jpg" alt="Project Image"></a>
 										</div>
 
 										<div>
@@ -565,7 +565,7 @@
 									<div class="card-img-footer">
 										<div class="mb-4">
 											<a class="d-block stretched-link cursor-hs-scale" href="#"><img class="w-100"
-													src="images/projects/project-5.jpg" alt="Project Image"></a>
+													src="./images/projects/project-5.jpg" alt="Project Image"></a>
 										</div>
 
 										<div>
@@ -584,7 +584,7 @@
 									<div class="card-img-footer">
 										<div class="mb-4">
 											<a class="d-block stretched-link cursor-hs-scale" href="#"><img class="w-100"
-													src="images/projects/project-6.jpg" alt="Project Image"></a>
+													src="./images/projects/project-6.jpg" alt="Project Image"></a>
 										</div>
 
 										<div>
@@ -672,13 +672,13 @@
 								<div class="col-lg-6">
 									<div class="position-relative">
 										<div class="services-tic-img-wr">
-											<img class="w-100 h-100 object-fit-cover" src="images/company/services.jpg"
+											<img class="w-100 h-100 object-fit-cover" src="./images/company/services.jpg"
 												alt="Illustration of services">
 										</div>
 
 										<div class="position-absolute left-0 bottom-0 card-lead-icon-bg services-tic-card">
-											<div class="mb-4 pb-2 card-lib-icon-wr"><img class="w-100" src="images/company/company-icon1.png"
-													alt="Icon 1">
+											<div class="mb-4 pb-2 card-lib-icon-wr"><img class="w-100"
+													src="./images/company/company-icon1.png" alt="Icon 1">
 											</div>
 
 											<p class="text-secondary fw-light lh-md mb-4 pb-2">We are a creative studio specializing in
@@ -718,13 +718,13 @@
 											class="tm-ss-img-frame-bg border border-primary border-opacity-50  d-flex justify-content-center align-items-center rounded-circle">
 											<div
 												class="position-relative bg-body d-flex justify-content-center align-items-center rounded-circle w-50 h-50 z-3 tm-ss-img-frame-icon-wr">
-												<img class="w-50 h-50" src="images/quote.png" alt="Quote symbol">
+												<img class="w-50 h-50" src="./images/quote.png" alt="Quote symbol">
 											</div>
 										</div>
 
 										<div class="position-absolute end-0 top-0 tm-ss-img-frame-img-wr">
 											<img class="w-100 h-100 object-fit-cover rounded-circle"
-												src="images/company/employee-discussion.jpg"
+												src="./images/company/employee-discussion.jpg"
 												alt="Couple of employees discussing using a laptop">
 										</div>
 									</div>
@@ -752,7 +752,7 @@
 
 												<div class="row row-cols-auto align-items-center">
 													<div class="col">
-														<img class="tm-ss-tm-profile-img rounded-circle" src="images/testimonials/client1.jpg"
+														<img class="tm-ss-tm-profile-img rounded-circle" src="./images/testimonials/client1.jpg"
 															alt="Client employee">
 													</div>
 													<div class="col">
@@ -781,7 +781,7 @@
 
 												<div class="row row-cols-auto align-items-center">
 													<div class="col">
-														<img class="tm-ss-tm-profile-img rounded-circle" src="images/testimonials/client2.jpg"
+														<img class="tm-ss-tm-profile-img rounded-circle" src="./images/testimonials/client2.jpg"
 															alt="Client employee">
 													</div>
 													<div class="col">
@@ -878,7 +878,7 @@
 											<div class="col-md-5 align-self-lg-stretch">
 												<div class="position-relative h-100 blog-lcl-card-img-relative-wr">
 													<div class="blog-lcl-card-img-wr"><img class="w-100 h-100 object-fit-cover"
-															src="images/blog/blog-image1.jpg" alt="Men working in laptop"></div>
+															src="./images/blog/blog-image1.jpg" alt="Men working in laptop"></div>
 												</div>
 											</div>
 
@@ -906,7 +906,7 @@
 											<div class="col-md-5 align-self-lg-stretch">
 												<div class="position-relative h-100 blog-lcl-card-img-relative-wr">
 													<div class="blog-lcl-card-img-wr"><img class="w-100 h-100 object-fit-cover"
-															src="images/blog/blog-image2.jpg" alt="Men working in laptop"></div>
+															src="./images/blog/blog-image2.jpg" alt="Men working in laptop"></div>
 												</div>
 											</div>
 
@@ -1002,7 +1002,7 @@
 						class="row row-cols-1 row-cols-md-auto justify-content-between align-items-center gy-3 footer-rcl-brand-row">
 						<div class="col">
 							<a class="d-inline-block cursor-hs-scale footer-rcl-logo-link" href="/">
-								<img class="w-100" src="images/logo-dark.png" alt="Kindled Logo">
+								<img class="w-100" src="./images/logo-dark.png" alt="Kindled Logo">
 							</a>
 						</div>
 
@@ -1031,7 +1031,7 @@
 
 	<!-- Font awesome kit -->
 	<script src="https://kit.fontawesome.com/efb6dbae73.js" crossorigin="anonymous"></script>
-	<script type="module" src="scripts/main.js"></script>
+	<script type="module" src="./scripts/main.js"></script>
 </body>
 
 </html>
