complete about page bs small view

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 				</button>
 
 				<div class="collapse navbar-collapse navbar-rmc-collapse" id="navbarSupportedContent">
-					<!-- || Nav -->
+					<!-- || Component - Nav -->
 					<ul class="navbar-nav me-auto mx-xxl-auto navbar-rmc-navbar">
 						<li class="nav-item navbar-rmc-nav-item">
 							<a class="nav-link active text-uppercase fw-semibold cfs-13 cursor-hs-scale ls-normal navbar-rmc-nav-link"
@@ -298,22 +298,33 @@
 						</div>
 					</section>
 
-					<!-- || Component - Banner roll full width -->
-					<div class="banner-roll-full-width overflow-hidden">
+					<!-- || Component - Banner infinite roll -->
+					<div class="overflow-hidden banner-infinite-roll banner-ir-tilt-3 banner-ir-shadow-sides" data-roll-speed="60"
+						data-clone="true" data-scroll-trigger="true">
 						<h2 class="visually-hidden">Services</h2>
-
-						<div class="bg-body border-top border-bottom border-secondary border-opacity-25 banner-rfw-wr">
-							<div class="banner-rfw-items-ctr">
-								<h3 class="display-3 fw-semibold banner-rfw-item banner-rfw-text">UI-UX Experience</h3>
-								<i class="fa-regular fa-star banner-rfw-item fa-2xl"></i>
-								<h3 class="display-3 fw-semibold banner-rfw-item banner-rfw-text">Web Development</h3>
-								<i class="fa-regular fa-star banner-rfw-item fa-2xl"></i>
-								<h3 class="display-3 fw-semibold banner-rfw-item banner-rfw-text">Digital Marketing</h3>
-								<i class="fa-regular fa-star banner-rfw-item fa-2xl"></i>
-								<h3 class="display-3 fw-semibold banner-rfw-item banner-rfw-text">Product Design</h3>
-								<i class="fa-regular fa-star banner-rfw-item fa-2xl"></i>
-								<h3 class="display-3 fw-semibold banner-rfw-item banner-rfw-text">Mobile Solutions</h3>
-								<i class="fa-regular fa-star banner-rfw-item fa-2xl"></i>
+						<div
+							class="d-flex flex-nowrap bg-body border-top border-bottom border-secondary border-opacity-25 banner-ir-roll-wr">
+							<div class="d-flex flex-nowrap flex-shrink-0 py-5 banner-ir-items-ctr">
+								<div class="flex-shrink-0 d-flex align-items-center">
+									<span class="display-3 fw-semibold me-4 me-md-5 lh-1">UI-UX Experience</span>
+									<i class="fa-regular fa-star fa-2xl me-4 me-md-5"></i>
+								</div>
+								<div class="flex-shrink-0 d-flex align-items-center">
+									<span class="display-3 fw-semibold me-4 me-md-5 lh-1">Web Development</span>
+									<i class="fa-regular fa-star fa-2xl me-4 me-md-5"></i>
+								</div>
+								<div class="flex-shrink-0 d-flex align-items-center">
+									<span class="display-3 fw-semibold me-4 me-md-5 lh-1">Digital Marketing</span>
+									<i class="fa-regular fa-star fa-2xl me-4 me-md-5"></i>
+								</div>
+								<div class="flex-shrink-0 d-flex align-items-center">
+									<span class="display-3 fw-semibold me-4 me-md-5 lh-1">Product Design</span>
+									<i class="fa-regular fa-star fa-2xl me-4 me-md-5"></i>
+								</div>
+								<div class="flex-shrink-0 d-flex align-items-center">
+									<span class="display-3 fw-semibold me-4 me-md-5 lh-1">Mobile Solutions</span>
+									<i class="fa-regular fa-star fa-2xl me-4 me-md-5"></i>
+								</div>
 							</div>
 						</div>
 					</div>
@@ -371,7 +382,7 @@
 					</section>
 
 					<!-- || Block - Services card lead icon -->
-					<section class="services-cards-lead-icon">
+					<section class="services-cards-lead-icon services-cli-mb">
 						<div class="container">
 							<div class="row mb-5 justify-content-between">
 								<div class="col-lg-7">
@@ -398,8 +409,8 @@
 								<div class="col">
 									<div class="border border-1 rounded-1 card-lead-icon animate__animated anim-gsap"
 										data-animation="animate__fadeIn" data-js-opacity-zero data-animation-offset="200">
-										<div class="pb-3 mb-4 card-li-icon-wr"><img class="w-100" src="./images/company/company-icon1.png"
-												alt="Icon 1">
+										<div class="pb-3 mb-4 card-li-icon-wr-w-50"><img class="w-100"
+												src="./images/company/company-icon1.png" alt="Icon 1">
 										</div>
 
 										<div class="pb-2 mb-1"><span class="text-secondary cfs-14">Product Design</span></div>
@@ -425,8 +436,8 @@
 								<div class="col">
 									<div class="border border-1 rounded-1 card-lead-icon animate__animated anim-gsap animate__delay-1s"
 										data-animation="animate__fadeIn" data-js-opacity-zero data-animation-offset="200">
-										<div class="pb-3 mb-4 card-li-icon-wr"><img class="w-100" src="./images/company/company-icon-2.png"
-												alt="Icon 1">
+										<div class="pb-3 mb-4 card-li-icon-wr-w-50"><img class="w-100"
+												src="./images/company/company-icon-2.png" alt="Icon 1">
 										</div>
 
 										<div class="pb-2 mb-1"><span class="text-secondary cfs-14">Customs Services</span></div>
@@ -452,8 +463,8 @@
 								<div class="col">
 									<div class="border border-1 rounded-1 card-lead-icon animate__animated anim-gsap animate__delay-1s"
 										data-animation="animate__fadeIn" data-js-opacity-zero data-animation-offset="200">
-										<div class="pb-3 mb-4 card-li-icon-wr"><img class="w-100" src="./images/company/company-icon3.png"
-												alt="Icon 1">
+										<div class="pb-3 mb-4 card-li-icon-wr-w-50"><img class="w-100"
+												src="./images/company/company-icon3.png" alt="Icon 1">
 										</div>
 
 										<div class="pb-2 mb-1"><span class="text-secondary cfs-14">Product Development</span></div>
@@ -607,38 +618,59 @@
 						<div class="container">
 							<h2 class="visually-hidden">Services</h2>
 
-							<!-- || Component - Banner roll color change -->
-							<div class="banner-roll-color-change overflow-hidden">
-								<div class="bg-body border-top border-bottom border-secondary border-opacity-25 banner-rcc-wr">
-									<div class="banner-rcc-items-ctr">
-										<h3 class="fw-semibold banner-rcc-item banner-rcc-text">Amazing Design</h3>
-										<i class="fa-regular fa-star banner-rfw-item fa-2xl"></i>
-										<h3 class="fw-semibold banner-rcc-item banner-rcc-text banner-rcc-text-stroke">Amazing Design
-										</h3>
-										<i class="fa-regular fa-star banner-rfw-item fa-2xl"></i>
-										<h3 class="fw-semibold banner-rcc-item banner-rcc-text">Amazing Design</h3>
-										<i class="fa-regular fa-star banner-rfw-item fa-2xl"></i>
-										<h3 class="fw-semibold banner-rcc-item banner-rcc-text banner-rcc-text-stroke">Amazing Design
-										</h3>
-										<i class="fa-regular fa-star banner-rfw-item fa-2xl"></i>
-										<h3 class="fw-semibold banner-rcc-item banner-rcc-text">Amazing Design</h3>
-										<i class="fa-regular fa-star banner-rfw-item fa-2xl"></i>
+							<!-- || Component - Banner infinite roll -->
+							<div class="overflow-hidden banner-infinite-roll service-tic-banner-ir" data-roll-speed="60"
+								data-clone="true" data-scroll-trigger="true">
+								<div class="d-flex flex-nowrap bg-body border-top border-bottom border-opacity-25 banner-ir-roll-wr">
+									<div class="d-flex flex-nowrap flex-shrink-0 py-4 banner-ir-items-ctr">
+										<div class="flex-shrink-0 d-flex align-items-center">
+											<span class="display-2 fw-semibold me-4 me-md-5 lh-base">Amazing Design</span>
+											<i class="fa-regular fa-star fa-2xl me-4 me-md-5"></i>
+										</div>
+										<div class="flex-shrink-0 d-flex align-items-center">
+											<span class="display-2 fw-semibold me-4 me-md-5 lh-base banner-ir-text-stroke">Amazing
+												Design</span>
+											<i class="fa-regular fa-star fa-2xl me-4 me-md-5"></i>
+										</div>
+										<div class="flex-shrink-0 d-flex align-items-center">
+											<span class="display-2 fw-semibold me-4 me-md-5 lh-base">Amazing Design</span>
+											<i class="fa-regular fa-star fa-2xl me-4 me-md-5"></i>
+										</div>
+										<div class="flex-shrink-0 d-flex align-items-center">
+											<span class="display-2 fw-semibold me-4 me-md-5 lh-base banner-ir-text-stroke">Amazing
+												Design</span>
+											<i class="fa-regular fa-star fa-2xl me-4 me-md-5"></i>
+										</div>
+										<div class="flex-shrink-0 d-flex align-items-center">
+											<span class="display-2 fw-semibold me-4 me-md-5 lh-base">Amazing Design</span>
+											<i class="fa-regular fa-star fa-2xl me-4 me-md-5"></i>
+										</div>
 									</div>
 
-									<div class="banner-rcc-items-ctr">
-										<h3 class="fw-semibold banner-rcc-item banner-rcc-text banner-rcc-text-stroke">Amazing Design
-										</h3>
-										<i class="fa-regular fa-star banner-rfw-item fa-2xl"></i>
-										<h3 class="fw-semibold banner-rcc-item banner-rcc-text">Amazing Design</h3>
-										<i class="fa-regular fa-star banner-rfw-item fa-2xl"></i>
-										<h3 class="fw-semibold banner-rcc-item banner-rcc-text banner-rcc-text-stroke">Amazing Design
-										</h3>
-										<i class="fa-regular fa-star banner-rfw-item fa-2xl"></i>
-										<h3 class="fw-semibold banner-rcc-item banner-rcc-text">Amazing Design</h3>
-										<i class="fa-regular fa-star banner-rfw-item fa-2xl"></i>
-										<h3 class="fw-semibold banner-rcc-item banner-rcc-text banner-rcc-text-stroke">Amazing Design
-										</h3>
-										<i class="fa-regular fa-star banner-rfw-item fa-2xl"></i>
+									<div class="d-flex flex-nowrap flex-shrink-0 py-4 banner-ir-items-ctr">
+										<div class="flex-shrink-0 d-flex align-items-center">
+											<span class="display-2 fw-semibold me-4 me-md-5 lh-base banner-ir-text-stroke">Amazing
+												Design</span>
+											<i class="fa-regular fa-star fa-2xl me-4 me-md-5"></i>
+										</div>
+										<div class="flex-shrink-0 d-flex align-items-center">
+											<span class="display-2 fw-semibold me-4 me-md-5 lh-base">Amazing Design</span>
+											<i class="fa-regular fa-star fa-2xl me-4 me-md-5"></i>
+										</div>
+										<div class="flex-shrink-0 d-flex align-items-center">
+											<span class="display-2 fw-semibold me-4 me-md-5 lh-base banner-ir-text-stroke">Amazing
+												Design</span>
+											<i class="fa-regular fa-star fa-2xl me-4 me-md-5"></i>
+										</div>
+										<div class="flex-shrink-0 d-flex align-items-center">
+											<span class="display-2 fw-semibold me-4 me-md-5 lh-base">Amazing Design</span>
+											<i class="fa-regular fa-star fa-2xl me-4 me-md-5"></i>
+										</div>
+										<div class="flex-shrink-0 d-flex align-items-center">
+											<span class="display-2 fw-semibold me-4 me-md-5 lh-base banner-ir-text-stroke">Amazing
+												Design</span>
+											<i class="fa-regular fa-star fa-2xl me-4 me-md-5"></i>
+										</div>
 									</div>
 								</div>
 							</div>
@@ -651,7 +683,8 @@
 											aria-hidden="true">Services</span>
 									</div>
 
-									<p class="fw-light text-secondary lh-md services-tic-desc-para">We help you to go online and increase
+									<p class="fw-light text-secondary lh-md services-tic-desc-para">We help you to go online and
+										increase
 										your
 										conversion rate
 										Better design for your digital products.</p>
@@ -683,7 +716,8 @@
 
 											<p class="text-secondary fw-light lh-md mb-4 pb-2">We are a creative studio specializing in
 												design,
-												development and strategy many different skills and disciplines in the production of all web.</p>
+												development and strategy many different skills and disciplines in the production of all web.
+											</p>
 
 											<a class="text-capitalize d-inline-block text-primary cfs-14 p-1 link-underline-primary link-underline-opacity-0 link-underline-opacity-100-hover card-lib-link cursor-hs-scale"
 												href="./pages/services.html"><span>Read More</span>
