--- a/pages/about.html
+++ b/pages/about.html
@@ -141,13 +141,16 @@
           <!-- || Block - Hero trans banner anim -->
           <div class="pb-5 hero-trans-banner-anim">
             <div class="container hero-tba-content-ctr">
-              <div class="row">
-                <div class="mb-3"><span
-                    class="text-uppercase ls-wide fw-light font-sora cfs-14 text-lead-list-marker">Who we are
-                    ?</span></div>
-                <h2 class="display-5 fw-semibold mb-4 animate__animated animate__delay-2s anim-gsap"
-                  data-animation="animate__fadeInUp">We're a digital agency based in Valencia.</h2>
-                <p class="lh-md text-secondary">We help our clients succeed by creating brand identities, digital
+              <div class="row justify-content-center gy-4">
+                <div class="col-12">
+                  <div class="mb-3"><span
+                      class="text-uppercase ls-wide fw-light font-sora cfs-14 text-lead-list-marker">Who we are
+                      ?</span></div>
+                  <h2 class="display-5 fw-semibold lh-base animate__animated animate__delay-2s anim-gsap"
+                    data-animation="animate__fadeInUp">We're a digital agency based in Valencia.</h2>
+                </div>
+                <p class="col-12 lh-md fw-light text-secondary">We help our clients succeed by creating brand
+                  identities, digital
                   experiences, and
                   print materials that
                   communicate clearly, achieve marketing goals, and look fantastic.</p>
@@ -159,40 +162,47 @@
               data-roll-speed="80" data-clone="true" data-scroll-trigger="true" data-animation="anim-si-up-animate">
               <div class="d-flex flex-nowrap banner-ir-roll-wr">
                 <div class="d-flex flex-nowrap flex-shrink-0 py-4 banner-ir-items-ctr">
-                  <div class="flex-shrink-0"><span class="display-2 fw-800 me-4 me-md-5 lh-base text-uppercase">About
+                  <div class="flex-shrink-0"><span
+                      class="display-2 fw-800 me-4 me-md-5 lh-base text-uppercase hero-tba-banner-text-font">About
                       Us</span>
                   </div>
                   <div class="flex-shrink-0"><span
-                      class="display-2 fw-800 me-4 me-md-5 lh-base text-uppercase banner-ir-text-stroke">About Us</span>
-                  </div>
-                  <div class="flex-shrink-0"><span class="display-2 fw-800 me-4 me-md-5 lh-base text-uppercase">About
+                      class="display-2 fw-800 me-4 me-md-5 lh-base text-uppercase banner-ir-text-stroke hero-tba-banner-text-font">About
                       Us</span>
                   </div>
                   <div class="flex-shrink-0"><span
-                      class="display-2 fw-800 me-4 me-md-5 lh-base text-uppercase banner-ir-text-stroke">About Us</span>
+                      class="display-2 fw-800 me-4 me-md-5 lh-base text-uppercase hero-tba-banner-text-font">About
+                      Us</span>
                   </div>
-                  <div class="flex-shrink-0"><span class="display-2 fw-800 me-4 me-md-5 lh-base text-uppercase">About
+                  <div class="flex-shrink-0"><span
+                      class="display-2 fw-800 me-4 me-md-5 lh-base text-uppercase banner-ir-text-stroke hero-tba-banner-text-font">About
+                      Us</span>
+                  </div>
+                  <div class="flex-shrink-0"><span
+                      class="display-2 fw-800 me-4 me-md-5 lh-base text-uppercase hero-tba-banner-text-font">About
                       Us</span>
                   </div>
                 </div>
 
                 <div class="d-flex flex-nowrap flex-shrink-0 py-4 banner-ir-items-ctr">
                   <div class="flex-shrink-0"><span
-                      class="display-2 fw-800 me-4 me-md-5 lh-base text-uppercase banner-ir-text-stroke">About
-                      Us</span>
-                  </div>
-                  <div class="flex-shrink-0"><span class="display-2 fw-800 me-4 me-md-5 lh-base text-uppercase">About
+                      class="display-2 fw-800 me-4 me-md-5 lh-base text-uppercase banner-ir-text-stroke hero-tba-banner-text-font">About
                       Us</span>
                   </div>
                   <div class="flex-shrink-0"><span
-                      class="display-2 fw-800 me-4 me-md-5 lh-base text-uppercase banner-ir-text-stroke">About
-                      Us</span>
-                  </div>
-                  <div class="flex-shrink-0"><span class="display-2 fw-800 me-4 me-md-5 lh-base text-uppercase">About
+                      class="display-2 fw-800 me-4 me-md-5 lh-base text-uppercase hero-tba-banner-text-font">About
                       Us</span>
                   </div>
                   <div class="flex-shrink-0"><span
-                      class="display-2 fw-800 me-4 me-md-5 lh-base text-uppercase banner-ir-text-stroke">About
+                      class="display-2 fw-800 me-4 me-md-5 lh-base text-uppercase banner-ir-text-stroke hero-tba-banner-text-font">About
+                      Us</span>
+                  </div>
+                  <div class="flex-shrink-0"><span
+                      class="display-2 fw-800 me-4 me-md-5 lh-base text-uppercase hero-tba-banner-text-font">About
+                      Us</span>
+                  </div>
+                  <div class="flex-shrink-0"><span
+                      class="display-2 fw-800 me-4 me-md-5 lh-base text-uppercase banner-ir-text-stroke hero-tba-banner-text-font">About
                       Us</span>
                   </div>
                 </div>
@@ -270,7 +280,7 @@
 
                     <h4 class="h5 mb-3 lh-base">Brand Strategy & <br>Art Direction</h4>
 
-                    <hr class="text-gray-500">
+                    <hr class="my-4 text-gray-500">
                     <p class="text-secondary fw-light lh-md mb-0">Creating a higher spacing and how people
                       move
                       through
@@ -287,7 +297,7 @@
 
                     <h4 class="h5 mb-3 lh-base">UX/UI Design & <br>Website/App Design</h4>
 
-                    <hr class="text-gray-500">
+                    <hr class="my-4 text-gray-500">
                     <p class="text-secondary fw-light lh-md mb-0">Creating a higher spacing and how people
                       move
                       through
@@ -304,7 +314,7 @@
 
                     <h4 class="h5 mb-3 lh-base">Typography & <br>Video Production</h4>
 
-                    <hr class="text-gray-500">
+                    <hr class="my-4 text-gray-500">
                     <p class="text-secondary fw-light lh-md mb-0">Creating a higher spacing and how people
                       move
                       through
@@ -340,7 +350,7 @@
                 </div>
 
                 <div class="col-lg-5 pt-4">
-                  <h3 class="h1 fw-semibold lh-base mb-5 anim-swipe-in-tb anim-gsap"
+                  <h3 class="h1 fw-semibold lh-base mb-5 sf-aic-tittle-mw anim-swipe-in-tb anim-gsap"
                     data-animation="anim-si-tb-animate">
                     Watch the creative process behind our digital marketing</h3>
 
