Complete about page bootstrap md view

--- a/pages/about.html
+++ b/pages/about.html
@@ -139,7 +139,7 @@
         <article>
 
           <!-- || Block - Hero trans banner anim -->
-          <div class="pb-5 hero-trans-banner-anim">
+          <div class="pb-5 pb-md-4 hero-trans-banner-anim">
             <div class="container hero-tba-content-ctr">
               <div class="row justify-content-center gy-4">
                 <div class="col-12">
@@ -350,7 +350,7 @@
                 </div>
 
                 <div class="col-lg-5 pt-4">
-                  <h3 class="h1 fw-semibold lh-base mb-5 sf-aic-tittle-mw anim-swipe-in-tb anim-gsap"
+                  <h3 class="col-md-8 h1 fw-semibold lh-base mb-5 anim-swipe-in-tb anim-gsap"
                     data-animation="anim-si-tb-animate">
                     Watch the creative process behind our digital marketing</h3>
 
@@ -951,7 +951,7 @@
           <!-- || Block - Brands card list responsive -->
           <section class="brands-cards-list-responsive">
             <div class="container">
-              <h3 class="h2 text-center fw-semibold brands-clr-tittle lh-base">We create experiences and turn ideas into
+              <h3 class="col-sm-10 h2 text-center fw-semibold mx-auto brands-clr-tittle lh-base">We create experiences and turn ideas into
                 reality.</h3>
 
               <div class="row row-cols-2 row-cols-md-3 g-4">
