Complete about page bs lg view

--- a/pages/about.html
+++ b/pages/about.html
@@ -141,15 +141,16 @@
           <!-- || Block - Hero trans banner anim -->
           <div class="pb-5 pb-md-4 hero-trans-banner-anim">
             <div class="container hero-tba-content-ctr">
-              <div class="row justify-content-center gy-4">
+              <div class="row justify-content-center gy-4 gy-lg-5">
                 <div class="col-12">
                   <div class="mb-3"><span
                       class="text-uppercase ls-wide fw-light font-sora cfs-14 text-lead-list-marker">Who we are
                       ?</span></div>
-                  <h2 class="display-5 fw-semibold lh-base animate__animated animate__delay-2s anim-gsap"
+                  <h2 class="display-4 col-lg-10 fw-semibold lh-base animate__animated animate__delay-2s anim-gsap"
                     data-animation="animate__fadeInUp">We're a digital agency based in Valencia.</h2>
                 </div>
-                <p class="col-12 lh-md fw-light text-secondary">We help our clients succeed by creating brand
+                <p class="col-12 col-lg-6 lh-md fw-light text-secondary animate__animated animate__delay-2s anim-gsap"
+                  data-animation="animate__fadeInUp">We help our clients succeed by creating brand
                   identities, digital
                   experiences, and
                   print materials that
@@ -236,7 +237,7 @@
                 </div>
 
                 <div class="col-lg-8">
-                  <p class="h5 lh-base fw-semibold">
+                  <p class="h5 lh-base cfs-lg-24 fw-semibold">
                     GeekFolio are digital marketing experts and can partner with you to implement tactical campaigns
                     which engage and connect audiences whilst driving ROI for your brand. We are SEO and SEM
                     professionals and have implemented successful search campaigns for clients which drive super-charge
@@ -327,11 +328,11 @@
 
           <!-- || Block - Service features aic ( accordian image component) -->
           <section class="service-features-aic">
-            <div class="container justify-content-center">
-              <div class="row gy-5">
+            <div class="container">
+              <div class="row justify-content-around align-items-start sf-aic-gy-6">
 
                 <!-- || Component - Image overlap tile bar -->
-                <div class="col-lg-5 overflow-hidden position-relative image-overlap-tile-bar">
+                <div class="col-lg-6 overflow-hidden position-relative image-overlap-tile-bar">
                   <div class="position-relative top-0 end-0 image-otb-wr">
                     <div class="image-otb-img-bar-wr">
                       <div class="anim-swipe-in-lr-zb anim-gsap" data-animation="anim-si-lr-zb-animate"><img
@@ -349,8 +350,8 @@
                   </div>
                 </div>
 
-                <div class="col-lg-5 pt-4">
-                  <h3 class="col-md-8 h1 fw-semibold lh-base mb-5 anim-swipe-in-tb anim-gsap"
+                <div class="col-lg-5">
+                  <h3 class="col-md-8 col-lg-12 h1 fw-semibold lh-base mb-5 anim-swipe-in-tb anim-gsap"
                     data-animation="anim-si-tb-animate">
                     Watch the creative process behind our digital marketing</h3>
 
@@ -413,8 +414,8 @@
           <!-- || Block - Company performance stat tms -->
           <section class="bg-white company-performans-stat-tms">
             <div class="container">
-              <div class="row gy-5">
-                <div class="col-lg-6">
+              <div class="row justify-content-between gy-5 gy-lg-0 company-ps-tms-gx-6">
+                <div class="col-lg-6 company-ps-tms-stat-col">
                   <h3 class="visually-hidden">Performance</h3>
                   <div class="anim-swipe-in-tb anim-gsap" data-animation="anim-si-tb-animate">
                     <h4 class="cfs-14 fw-light text-uppercase ls-wide mb-4">SINCE FROM 2008</h4>
@@ -547,7 +548,7 @@
 
             <!-- || Component - Text sticky cc (color change) large -->
             <div class="container team-pa-st-tittle-ctr">
-              <h3 class="fw-semibold text-uppercase lh-1 team-pa-st-tittle">Team</h3>
+              <h3 class="fw-semibold text-uppercase text-center lh-1 team-pa-st-tittle">Team</h3>
             </div>
 
             <!-- || Component - swiper vh (veriable height) profiles loop -->
@@ -951,7 +952,9 @@
           <!-- || Block - Brands card list responsive -->
           <section class="brands-cards-list-responsive">
             <div class="container">
-              <h3 class="col-sm-10 h2 text-center fw-semibold mx-auto brands-clr-tittle lh-base">We create experiences and turn ideas into
+              <h3 class="col-sm-9 col-lg-7 h2 text-center fw-semibold mx-auto brands-clr-tittle lh-base">We create
+                experiences
+                and turn ideas into
                 reality.</h3>
 
               <div class="row row-cols-2 row-cols-md-3 g-4">
@@ -1043,8 +1046,8 @@
             </div>
           </section>
 
+          <!-- || Block - Lead parallax bg sp (sides padding) -->
           <section class="lead-parallax-bg-sp">
-
             <div class="container position-relative me-0 lead-pbg-sp-parallax-ctr">
               <div class="overflow-hidden position-absolute start-0 end-0 top-0 z-n1 lead-pbg-sp-parallax">
                 <img class="position-relative w-100 object-fit-cover lead-pbg-sp-parallax-img"
@@ -1055,14 +1058,15 @@
 
             <div class="position-relative">
               <div class="position-relative z-1 container lead-pbg-sp-cnt-ctr">
-                <div class="row row-cols-1 gy-4">
-                  <div class="col">
+                <div class="row gy-4 align-items-center justify-content-between">
+                  <div class="col-lg-auto">
                     <h3 class="display-5 fw-semibold">Have a project in mind?</h3>
                     <p class="display-5"><span class="fw-semibold">Let’s</span> <span
                         class="fw-medium font-playfair-display">get to
                         work.</span></p>
                   </div>
-                  <div class="col">
+
+                  <div class="col-lg-auto lead-pbg-sp-me-lg-6">
                     <a class="d-flex flex-column align-items-center justify-content-center row-gap-2 text-primary text-decoration-none rounded-circle ms-auto me-auto link-hover-bg-border-trans"
                       href="./contact.html"><svg class="text-primary" width="18" height="18" viewBox="0 0 18 18"
                         fill="none" xmlns="http://www.w3.org/2000/svg">
