--- a/pages/about.html
+++ b/pages/about.html
@@ -139,17 +139,18 @@
         <article>
 
           <!-- || Block - Hero trans banner anim -->
-          <div class="pb-5 pb-md-4 hero-trans-banner-anim">
+          <div class="pb-5 pb-md-4 pb-xl-0 hero-trans-banner-anim">
             <div class="container hero-tba-content-ctr">
               <div class="row justify-content-center gy-4 gy-lg-5">
                 <div class="col-12">
                   <div class="mb-3"><span
                       class="text-uppercase ls-wide fw-light font-sora cfs-14 text-lead-list-marker">Who we are
                       ?</span></div>
-                  <h2 class="display-4 col-lg-10 fw-semibold lh-base animate__animated animate__delay-2s anim-gsap"
+                  <h2
+                    class="display-4 col-lg-10 col-xl-8 fw-semibold lh-base animate__animated animate__delay-2s anim-gsap"
                     data-animation="animate__fadeInUp">We're a digital agency based in Valencia.</h2>
                 </div>
-                <p class="col-12 col-lg-6 lh-md fw-light text-secondary animate__animated animate__delay-2s anim-gsap"
+                <p class="col-12 col-lg-6 col-xl-5 lh-md fw-light text-secondary animate__animated animate__delay-2s anim-gsap"
                   data-animation="animate__fadeInUp">We help our clients succeed by creating brand
                   identities, digital
                   experiences, and
@@ -159,7 +160,8 @@
             </div>
 
             <!-- || Component - Banner infinite roll -->
-            <div class="overflow-hidden banner-infinite-roll anim-slide-in-up anim-si-up-delay-responsive anim-gsap"
+            <div
+              class="overflow-hidden banner-infinite-roll hero-tba-banner anim-slide-in-up anim-si-up-delay-responsive anim-gsap"
               data-roll-speed="80" data-clone="true" data-scroll-trigger="true" data-animation="anim-si-up-animate">
               <div class="d-flex flex-nowrap banner-ir-roll-wr">
                 <div class="d-flex flex-nowrap flex-shrink-0 py-4 banner-ir-items-ctr">
@@ -237,7 +239,7 @@
                 </div>
 
                 <div class="col-lg-8">
-                  <p class="h5 lh-base cfs-lg-24 fw-semibold">
+                  <p class="h5 lh-base cfs-lg-24 cfs-xl-28 fw-semibold">
                     GeekFolio are digital marketing experts and can partner with you to implement tactical campaigns
                     which engage and connect audiences whilst driving ROI for your brand. We are SEO and SEM
                     professionals and have implemented successful search campaigns for clients which drive super-charge
@@ -332,7 +334,7 @@
               <div class="row justify-content-around align-items-start sf-aic-gy-6">
 
                 <!-- || Component - Image overlap tile bar -->
-                <div class="col-lg-6 overflow-hidden position-relative image-overlap-tile-bar">
+                <div class="col-lg-5 overflow-hidden position-relative image-overlap-tile-bar">
                   <div class="position-relative top-0 end-0 image-otb-wr">
                     <div class="image-otb-img-bar-wr">
                       <div class="anim-swipe-in-lr-zb anim-gsap" data-animation="anim-si-lr-zb-animate"><img
@@ -414,8 +416,8 @@
           <!-- || Block - Company performance stat tms -->
           <section class="bg-white company-performans-stat-tms">
             <div class="container">
-              <div class="row justify-content-between gy-5 gy-lg-0 company-ps-tms-gx-6">
-                <div class="col-lg-6 company-ps-tms-stat-col">
+              <div class="row justify-content-between align-items-center gy-5 gy-lg-0 company-ps-tms-gx-6">
+                <div class="col-lg-6">
                   <h3 class="visually-hidden">Performance</h3>
                   <div class="anim-swipe-in-tb anim-gsap" data-animation="anim-si-tb-animate">
                     <h4 class="cfs-14 fw-light text-uppercase ls-wide mb-4">SINCE FROM 2008</h4>
@@ -952,94 +954,99 @@
           <!-- || Block - Brands card list responsive -->
           <section class="brands-cards-list-responsive">
             <div class="container">
-              <h3 class="col-sm-9 col-lg-7 h2 text-center fw-semibold mx-auto brands-clr-tittle lh-base">We create
-                experiences
-                and turn ideas into
-                reality.</h3>
+              <div class="row justify-content-center">
+                <h3 class="col-sm-9 col-lg-7 col-xl-6 h2 text-center fw-semibold mx-auto brands-clr-tittle lh-base">We
+                  create
+                  experiences
+                  and turn ideas into
+                  reality.</h3>
 
-              <div class="row row-cols-2 row-cols-md-3 g-4">
-                <div class="col">
-                  <div
-                    class="position-relative border border-1 rounded-3 text-center animate__animated animate__delay-2s anim-gsap card-hover-swap-elem"
-                    data-animation="animate__fadeIn" data-js-opacity-zero>
-                    <a class="cursor-hs-scale text-primary text-decoration-none ls-base stretched-link card-hse-link"
-                      href="/"><span
-                        class="animate__animated animate__slow animate__fadeOut card-hse-link-text">www.GeekFolio.com</span>
+                <div class="col-lg-11">
+                  <div class="row row-cols-2 row-cols-md-3 g-4 g-xl-5">
+                    <div class="col">
                       <div
-                        class="position-absolute top-50 start-50 translate-middle animate__animated animate__slow animate__zoomIn card-hse-img-wr">
-                        <img class="w-100 opacity-75" src="../images/brand/asgardia.png" alt="Asgardia">
+                        class="position-relative border border-1 rounded-3 text-center animate__animated animate__delay-2s anim-gsap card-hover-swap-elem"
+                        data-animation="animate__fadeIn" data-js-opacity-zero>
+                        <a class="cursor-hs-scale text-primary text-decoration-none ls-base stretched-link card-hse-link"
+                          href="/"><span
+                            class="animate__animated animate__slow animate__fadeOut card-hse-link-text">www.GeekFolio.com</span>
+                          <div
+                            class="position-absolute top-50 start-50 translate-middle animate__animated animate__slow animate__zoomIn card-hse-img-wr">
+                            <img class="w-100 opacity-75" src="../images/brand/asgardia.png" alt="Asgardia">
+                          </div>
+                        </a>
                       </div>
-                    </a>
-                  </div>
-                </div>
-                <div class="col">
-                  <div
-                    class="position-relative border border-1 rounded-3 text-center animate__animated animate__delay-2s anim-gsap card-hover-swap-elem"
-                    data-animation="animate__fadeIn" data-js-opacity-zero>
-                    <a class="cursor-hs-scale text-primary text-decoration-none ls-base stretched-link card-hse-link"
-                      href="/"><span
-                        class="animate__animated animate__slow animate__fadeOut card-hse-link-text">www.GeekFolio.com</span>
+                    </div>
+                    <div class="col">
                       <div
-                        class="position-absolute top-50 start-50 translate-middle animate__animated animate__slow animate__zoomIn card-hse-img-wr">
-                        <img class="w-100 opacity-75" src="../images/brand/nirastate.png" alt="Nirastate">
+                        class="position-relative border border-1 rounded-3 text-center animate__animated animate__delay-2s anim-gsap card-hover-swap-elem"
+                        data-animation="animate__fadeIn" data-js-opacity-zero>
+                        <a class="cursor-hs-scale text-primary text-decoration-none ls-base stretched-link card-hse-link"
+                          href="/"><span
+                            class="animate__animated animate__slow animate__fadeOut card-hse-link-text">www.GeekFolio.com</span>
+                          <div
+                            class="position-absolute top-50 start-50 translate-middle animate__animated animate__slow animate__zoomIn card-hse-img-wr">
+                            <img class="w-100 opacity-75" src="../images/brand/nirastate.png" alt="Nirastate">
+                          </div>
+                        </a>
                       </div>
-                    </a>
-                  </div>
-                </div>
-                <div class="col">
-                  <div
-                    class="position-relative border border-1 rounded-3 text-center animate__animated animate__delay-2s anim-gsap card-hover-swap-elem"
-                    data-animation="animate__fadeIn" data-js-opacity-zero>
-                    <a class="cursor-hs-scale text-primary text-decoration-none ls-base stretched-link card-hse-link"
-                      href="/"><span
-                        class="animate__animated animate__slow animate__fadeOut card-hse-link-text">www.GeekFolio.com</span>
+                    </div>
+                    <div class="col">
                       <div
-                        class="position-absolute top-50 start-50 translate-middle animate__animated animate__slow animate__zoomIn card-hse-img-wr">
-                        <img class="w-100 opacity-75" src="../images/brand/velocity.png" alt="Velocity">
+                        class="position-relative border border-1 rounded-3 text-center animate__animated animate__delay-2s anim-gsap card-hover-swap-elem"
+                        data-animation="animate__fadeIn" data-js-opacity-zero>
+                        <a class="cursor-hs-scale text-primary text-decoration-none ls-base stretched-link card-hse-link"
+                          href="/"><span
+                            class="animate__animated animate__slow animate__fadeOut card-hse-link-text">www.GeekFolio.com</span>
+                          <div
+                            class="position-absolute top-50 start-50 translate-middle animate__animated animate__slow animate__zoomIn card-hse-img-wr">
+                            <img class="w-100 opacity-75" src="../images/brand/velocity.png" alt="Velocity">
+                          </div>
+                        </a>
                       </div>
-                    </a>
-                  </div>
-                </div>
-                <div class="col">
-                  <div
-                    class="position-relative border border-1 rounded-3 text-center animate__animated animate__delay-2s anim-gsap card-hover-swap-elem"
-                    data-animation="animate__fadeIn" data-js-opacity-zero>
-                    <a class="cursor-hs-scale text-primary text-decoration-none ls-base stretched-link card-hse-link"
-                      href="/"><span
-                        class="animate__animated animate__slow animate__fadeOut card-hse-link-text">www.GeekFolio.com</span>
+                    </div>
+                    <div class="col">
                       <div
-                        class="position-absolute top-50 start-50 translate-middle animate__animated animate__slow animate__zoomIn card-hse-img-wr">
-                        <img class="w-100 opacity-75" src="../images/brand/utosia.png" alt="Utosia">
+                        class="position-relative border border-1 rounded-3 text-center animate__animated animate__delay-2s anim-gsap card-hover-swap-elem"
+                        data-animation="animate__fadeIn" data-js-opacity-zero>
+                        <a class="cursor-hs-scale text-primary text-decoration-none ls-base stretched-link card-hse-link"
+                          href="/"><span
+                            class="animate__animated animate__slow animate__fadeOut card-hse-link-text">www.GeekFolio.com</span>
+                          <div
+                            class="position-absolute top-50 start-50 translate-middle animate__animated animate__slow animate__zoomIn card-hse-img-wr">
+                            <img class="w-100 opacity-75" src="../images/brand/utosia.png" alt="Utosia">
+                          </div>
+                        </a>
                       </div>
-                    </a>
-                  </div>
-                </div>
-                <div class="col">
-                  <div
-                    class="position-relative border border-1 rounded-3 text-center animate__animated animate__delay-2s anim-gsap card-hover-swap-elem"
-                    data-animation="animate__fadeIn" data-js-opacity-zero>
-                    <a class="cursor-hs-scale text-primary text-decoration-none ls-base stretched-link card-hse-link"
-                      href="/"><span
-                        class="animate__animated animate__slow animate__fadeOut card-hse-link-text">www.GeekFolio.com</span>
+                    </div>
+                    <div class="col">
                       <div
-                        class="position-absolute top-50 start-50 translate-middle animate__animated animate__slow animate__zoomIn card-hse-img-wr">
-                        <img class="w-100 opacity-75" src="../images/brand/kanba.png" alt="Kanba">
+                        class="position-relative border border-1 rounded-3 text-center animate__animated animate__delay-2s anim-gsap card-hover-swap-elem"
+                        data-animation="animate__fadeIn" data-js-opacity-zero>
+                        <a class="cursor-hs-scale text-primary text-decoration-none ls-base stretched-link card-hse-link"
+                          href="/"><span
+                            class="animate__animated animate__slow animate__fadeOut card-hse-link-text">www.GeekFolio.com</span>
+                          <div
+                            class="position-absolute top-50 start-50 translate-middle animate__animated animate__slow animate__zoomIn card-hse-img-wr">
+                            <img class="w-100 opacity-75" src="../images/brand/kanba.png" alt="Kanba">
+                          </div>
+                        </a>
                       </div>
-                    </a>
-                  </div>
-                </div>
-                <div class="col">
-                  <div
-                    class="position-relative border border-1 rounded-3 text-center animate__animated animate__delay-2s anim-gsap card-hover-swap-elem"
-                    data-animation="animate__fadeIn" data-js-opacity-zero>
-                    <a class="curson-hs-scale text-primary text-decoration-none ls-base stretched-link card-hse-link"
-                      href="/"><span
-                        class="animate__animated animate__slow animate__fadeOut card-hse-link-text">www.GeekFolio.com</span>
+                    </div>
+                    <div class="col">
                       <div
-                        class="position-absolute top-50 start-50 translate-middle animate__animated animate__slow animate__zoomIn card-hse-img-wr">
-                        <img class="w-100 opacity-75" src="../images/brand/nirastate.png" alt="Nirastate">
+                        class="position-relative border border-1 rounded-3 text-center animate__animated animate__delay-2s anim-gsap card-hover-swap-elem"
+                        data-animation="animate__fadeIn" data-js-opacity-zero>
+                        <a class="curson-hs-scale text-primary text-decoration-none ls-base stretched-link card-hse-link"
+                          href="/"><span
+                            class="animate__animated animate__slow animate__fadeOut card-hse-link-text">www.GeekFolio.com</span>
+                          <div
+                            class="position-absolute top-50 start-50 translate-middle animate__animated animate__slow animate__zoomIn card-hse-img-wr">
+                            <img class="w-100 opacity-75" src="../images/brand/nirastate.png" alt="Nirastate">
+                          </div>
+                        </a>
                       </div>
-                    </a>
+                    </div>
                   </div>
                 </div>
               </div>
